package ecommerce.Enums;

public enum Role {
    USER, SUPPLIER, ADMIN
}
